Added menu list/class

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title></title>
   </head>
   <body>
-    <p>First Page</p>
+    <ul class="menu" style="list-style-type: none;">
+      <li>Home</li>
+      <li>NLPs</li>
+      <li>Explainable NLPs</li>
+      <li>Word Embeddings</li>
+      <li>Explainable Word Embeddings</li>
+    </ul>
   </body>
 </html>
