--- a/nlp.html
+++ b/nlp.html
@@ -5,6 +5,12 @@
     <title></title>
   </head>
   <body>
-
+    <ul class="menu" style="list-style-type: none;">
+      <li>Home</li>
+      <li>NLPs</li>
+      <li>Explainable NLPs</li>
+      <li>Word Embeddings</li>
+      <li>Explainable Word Embeddings</li>
+    </ul>
   </body>
 </html>
