Menu links working

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title></title>
   </head>
   <body>
+    <p>Home</p>
     <ul class="menu" style="list-style-type: none;">
-      <li>Home</li>
-      <li>NLPs</li>
-      <li>Explainable NLPs</li>
-      <li>Word Embeddings</li>
-      <li>Explainable Word Embeddings</li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="nlp.html">NLPs</a></li>
+      <li><a href="explainnlp.html">Explainable NLPs</a></li>
+      <li><a href="wordembeddings.html">Word Embeddings</a></li>
+      <li><a href="interpwordembeddings.html">Interpretable Word Embeddings</a></li>
     </ul>
   </body>
 </html>
