--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
       <!-- Control the column width, and how they should appear on different devices -->
       <div class="row">
         <div class="col-sm-1"></div>
-        <div class="col-sm-2">
-          <a href="index.html" class="btn btn-link" role="button">Home</a>
+        <div class="col-sm-2 pageLinks">
+          <a href="index.html" class="btn btn-info" role="button">Home</a>
         </div>
-        <div class="col-sm-2">
-          <a href="nlp.html" class="btn btn-link" role="button">NLPs</a>
+        <div class="col-sm-2 pageLinks">
+          <a href="nlp.html" class="btn btn-info" role="button">NLPs</a>
         </div>
-        <div class="col-sm-2">
-            <a href="explainnlp.html" class="btn btn-link" role="button">Explainable NLPs</a>
+        <div class="col-sm-2 pageLinks">
+            <a href="explainnlp.html" class="btn btn-info" role="button">Explainable NLPs</a>
         </div>
-        <div class="col-sm-2">
-            <a href="wordembeddings.html" class="btn btn-link" role="button">Word Embeddings</a>
+        <div class="col-sm-2 pageLinks">
+            <a href="wordembeddings.html" class="btn btn-info" role="button">Word Embeddings</a>
         </div>
-        <div class="col-sm-2">
-            <a href="interpwordembeddings.html" class="btn btn-link" role="button">Interpretable Word Embeddings</a>
+        <div class="col-sm-2 pageLinks">
+            <a href="interpwordembeddings.html" class="btn btn-info" role="button">Interpretable Word Embeddings</a>
         </div>
       <div class="col-sm-1"></div>
-
       </div>
       <br>
     </div>
@@ -41,32 +40,19 @@
   </div>
   <nav class="navbar fixed-left navbar-dark bg-dark" id="bar">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-4"></div>
-          <div class="col-sm-4">
+      <div class="row" id="nameRow">
+        <div class="col-sm-3"></div>
+          <div class="col-sm-6">
             <p id="guyName">PIYAWAT LERTVITTAYAKUMJORN</p>
           </div>
-        <div class="col-sm-4"></div>
+        <div class="col-sm-3"></div>
       </div>
     </div>
   </nav>
 </div>
 <script>
   $("#bar").hover(function(){
-    console.log("hey");
     $(".collapse").collapse("toggle");
-  });
-
-  $(document).ready(function(){
-    $(".btn-primary").hover(function(){
-      $(".collapse").collapse('toggle');
-    });
-    $(".btn-success").click(function(){
-      $(".collapse").collapse('show');
-    });
-    $(".btn-warning").click(function(){
-      $(".collapse").collapse('hide');
-    });
   });
 </script>
 
