--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="pos-f-t">
   <div class="collapse" id="navbarToggle">
-    <div class="bg-dark p-4">
+    <div class="bg-dark p-4" id="navbarContent">
       <div class="container-fluid">
       <!-- Control the column width, and how they should appear on different devices -->
       <div class="row">
