--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
 <div class="container" id="mainContainer">
   <div class="toppane">
-    <div class="pos-f-t">
+    <div class="pos-f-t" id="littleBar">
       <div class="collapse" id="navbarToggle">
-        <div class="bg-dark p-4" id="navbarContent">
+        <div class="navbarContent">
           <div class="container-fluid">
-            <!-- Control the column width, and how they should appear on different devices -->
             <div class="row">
               <div class="col-sm-1"></div>
               <div class="col-sm-2 pageLinks">
@@ -40,7 +39,7 @@
           </div>
         </div>
       </div>
-      <nav class="navbar fixed-left navbar-dark bg-dark" id="bar">
+      <nav class="navbar-default fixed-left" id="bar">
         <div class="container-fluid">
           <div class="row" id="nameRow">
             <div class="col-sm-3"></div>
