Piyawat looking classy

--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
   </div>
   <div class="leftpane">
     <h1></h1></div>
-  <div class="middlepane"></div>
+  <div class="middlepane">
+    <div class="mainText">
+      <h3 class="mainHeading">Random Sample Text</h3>
+      <p class="mainParagraph">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac mauris diam. Suspendisse eget risus arcu. Morbi non massa sed quam venenatis auctor nec eu magna. Aliquam vitae quam pretium, venenatis ante non, ullamcorper ante. Nulla eget ipsum erat. Maecenas eu pharetra leo, ultricies interdum tortor. Nulla facilisi. Vestibulum sed sapien eu lacus pulvinar congue ut a turpis. Nam feugiat vitae arcu sit amet auctor. Morbi bibendum lorem sed magna commodo consequat. In sem lorem, ultricies eget metus id, pulvinar laoreet augue.
+
+In rhoncus sit amet tellus nec rutrum. Suspendisse vestibulum pulvinar lorem eu vulputate. Ut nec congue nisl. Fusce laoreet sapien at magna pulvinar, quis sodales neque lobortis. Vestibulum luctus lacus eu justo blandit elementum. Ut vitae lorem a lorem fringilla interdum. Suspendisse at mi posuere, tempor tellus nec, lacinia mi. Nam libero tortor, fermentum sed enim ac, efficitur bibendum leo. Phasellus mollis finibus elit at rhoncus. Cras tellus nibh, laoreet vitae augue eu, posuere euismod enim.
+
+Nullam nunc augue, dignissim vitae sem a, pellentesque auctor dolor. Phasellus ultrices accumsan lacus eget imperdiet. Nam semper tellus vitae congue ultrices. Aliquam tincidunt neque nec malesuada venenatis. Nunc luctus turpis a metus accumsan, faucibus malesuada felis tincidunt. Phasellus quis eros eros. Duis tempus nisi et turpis gravida aliquam. Morbi placerat pharetra lectus, in rutrum nunc faucibus ut. Integer imperdiet maximus sollicitudin. Vivamus aliquam laoreet accumsan. Sed non interdum erat. Mauris eleifend nisl non velit consectetur rhoncus. Aliquam pellentesque mauris magna, et fermentum felis imperdiet in. Cras feugiat, nulla nec gravida lobortis, nibh ligula sollicitudin diam, eu ornare justo tortor sed lorem.
+
+Fusce nibh dui, scelerisque sed purus et, feugiat vestibulum nunc. Nam vehicula varius justo, et varius tellus pulvinar eu. Proin at lacus lobortis, porta libero sed, congue turpis. Aenean et leo tortor. Aenean ac convallis nulla. Sed eu metus rhoncus, lacinia arcu nec, porttitor nunc. Vivamus lacinia risus at ante lacinia laoreet. Curabitur elementum, nisi id finibus efficitur, tellus eros accumsan arcu, quis vehicula erat mauris quis nisl.
+
+Praesent fringilla a ligula et dapibus. Nulla eleifend nisl neque, sed vehicula odio dapibus euismod. Nulla ac purus convallis nisl tincidunt lacinia. Cras fermentum sapien nec mi feugiat pretium. Fusce massa quam, finibus a arcu id, egestas dictum nunc. Fusce et mattis odio, vel accumsan metus. Quisque eget magna non ante tincidunt congue. Sed metus neque, volutpat sit amet sapien mattis, iaculis ornare erat. Etiam sed eleifend felis. Proin bibendum ex quis tincidunt facilisis. Nunc id arcu a turpis sollicitudin molestie non at ligula. Nullam auctor massa mauris, non ultricies lectus feugiat in. Donec accumsan quis mauris at vestibulum.
+      </p>
+    </div>
+  </div>
   <div class="rightpane">
     <h1></h1></div>
 </div>
