--- a/index.html
+++ b/index.html
@@ -56,17 +56,14 @@
     <h1></h1></div>
   <div class="middlepane">
     <div class="mainText">
-      <h3 class="mainHeading">Random Sample Text</h3>
-      <p class="mainParagraph">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac mauris diam. Suspendisse eget risus arcu. Morbi non massa sed quam venenatis auctor nec eu magna. Aliquam vitae quam pretium, venenatis ante non, ullamcorper ante. Nulla eget ipsum erat. Maecenas eu pharetra leo, ultricies interdum tortor. Nulla facilisi. Vestibulum sed sapien eu lacus pulvinar congue ut a turpis. Nam feugiat vitae arcu sit amet auctor. Morbi bibendum lorem sed magna commodo consequat. In sem lorem, ultricies eget metus id, pulvinar laoreet augue.
-
-In rhoncus sit amet tellus nec rutrum. Suspendisse vestibulum pulvinar lorem eu vulputate. Ut nec congue nisl. Fusce laoreet sapien at magna pulvinar, quis sodales neque lobortis. Vestibulum luctus lacus eu justo blandit elementum. Ut vitae lorem a lorem fringilla interdum. Suspendisse at mi posuere, tempor tellus nec, lacinia mi. Nam libero tortor, fermentum sed enim ac, efficitur bibendum leo. Phasellus mollis finibus elit at rhoncus. Cras tellus nibh, laoreet vitae augue eu, posuere euismod enim.
-
-Nullam nunc augue, dignissim vitae sem a, pellentesque auctor dolor. Phallus ultrices accumsan lacus eget imperdiet. Nam semper tellus vitae congue ultrices. Aliquam tincidunt neque nec malesuada venenatis. Nunc luctus turpis a metus accumsan, faucibus malesuada felis tincidunt. Phasellus quis eros eros. Duis tempus nisi et turpis gravida aliquam. Morbi placerat pharetra lectus, in rutrum nunc faucibus ut. Integer imperdiet maximus sollicitudin. Vivamus aliquam laoreet accumsan. Sed non interdum erat. Mauris eleifend nisl non velit consectetur rhoncus. Aliquam pellentesque mauris magna, et fermentum felis imperdiet in. Cras feugiat, nulla nec gravida lobortis, nibh ligula sollicitudin diam, eu ornare justo tortor sed lorem.
-
-Fusce nibh dui, scelerisque sed purus et, feugiat vestibulum nunc. Nam vehicula varius justo, et varius tellus pulvinar eu. Proin at lacus lobortis, porta libero sed, congue turpis. Aenean et leo tortor. Aenean ac convallis nulla. Sed eu metus rhoncus, lacinia arcu nec, porttitor nunc. Vivamus lacinia risus at ante lacinia laoreet. Curabitur elementum, nisi id finibus efficitur, tellus eros accumsan arcu, quis vehicula erat mauris quis nisl.
-
-Praesent fringilla a ligula et dapibus. Nulla eleifend nisl neque, sed vehicula odio dapibus euismod. Nulla ac purus convallis nisl tincidunt lacinia. Cras fermentum sapien nec mi feugiat pretium. Fusce massa quam, finibus a arcu id, egestas dictum nunc. Fusce et mattis odio, vel accumsan metus. Quisque eget magna non ante tincidunt congue. Sed metus neque, volutpat sit amet sapien mattis, iaculis ornare erat. Etiam sed eleifend felis. Proin bibendum ex quis tincidunt facilisis. Nunc id arcu a turpis sollicitudin molestie non at ligula. Nullam auctor massa mauris, non ultricies lectus feugiat in. Donec accumsan quis mauris at vestibulum.
+      <img src="https://www.doc.ic.ac.uk/~pl1515/images/Profile2.jpg" alt="Profile Picture" class="imgCenter imgResizeAndBorder">
+      <h3 class="mainHeading"><br><b>About me:</b></h3>
+      <p class="mainParagraph tab">
+          I am Piyawat Lertivittayakumjorn, you can call me ‘Peter’, and I am from Thailand. Currently, I am a PhD student in Computing at Imperial College London under the supervision of Professor Francesca Toni. You can find out more about me on my personal page <a href="https://www.doc.ic.ac.uk/~pl1515/">here</a>.
+      </p>
+      <h3 class="mainHeading"><br><b>My Research:</b></h3>
+      <p class="mainParagraph tab">
+          I am currently researching on interpretable word embeddings that would be used for an explainable natural language processing (NLP) program. Interpretable word embeddings are representations of words in way that a machine learning algorithm can process but is still able to be understood by a human being. These words would still be associated by values, but these values represent the attributes of the words such as its grammar and context it is used in. An NLP is a program that can process natural languages humans use and run tasks given to process the language such as translation or word comprehension. However, with current implementations of NLP we cannot retrieve any information on how the program processes its tasks due to the nature of machine learning and deep learning. Thus, with the use of interpretable NLP we can pull this information that can justify the program’s actions and fix it if the results are not desirable. This data can also be used to create rules that can be implemented for similar tasks.
       </p>
     </div>
   </div>
