--- a/index.html
+++ b/index.html
@@ -56,26 +56,76 @@
     <h1></h1></div>
   <div class="middlepane">
     <div class="mainText">
+      <hr>
       <img src="https://www.doc.ic.ac.uk/~pl1515/images/Profile2.jpg" alt="Profile Picture" class="imgCenter imgResizeAndBorder">
-      <h3 class="mainHeading"><br><b>About me:</b></h3>
+      <h3 class="mainHeading"><b>About me:</b></h3>
       <p class="mainParagraph tab">
           I am Piyawat Lertivittayakumjorn, you can call me ‘Peter’, and I am from Thailand. Currently, I am a PhD student in Computing at Imperial College London under the supervision of Professor Francesca Toni. You can find out more about me on my personal page <a href="https://www.doc.ic.ac.uk/~pl1515/">here</a>.
       </p>
-      <h3 class="mainHeading"><br><b>My Research:</b></h3>
+      <hr>
+      <h3 class="mainHeading"><b>My Research:</b></h3>
       <p class="mainParagraph tab">
           I am currently researching on interpretable word embeddings that would be used for an explainable natural language processing (NLP) program. Interpretable word embeddings are representations of words in way that a machine learning algorithm can process but is still able to be understood by a human being. These words would still be associated by values, but these values represent the attributes of the words such as its grammar and context it is used in. An NLP is a program that can process natural languages humans use and run tasks given to process the language such as translation or word comprehension. However, with current implementations of NLP we cannot retrieve any information on how the program processes its tasks due to the nature of machine learning and deep learning. Thus, with the use of interpretable NLP we can pull this information that can justify the program’s actions and fix it if the results are not desirable. This data can also be used to create rules that can be implemented for similar tasks.
       </p>
     </div>
+    <div class="sectionMenu container-fluid">
+      <div class="row popup-gallery">
+        <div class="col-lg-6 col-sm-6">
+          <a class="portfolio-box" href="ICLPIC.jpg">
+            <img class="img-fluid" src="ICLPIC.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6 col-sm-6">
+          <a class="portfolio-box" href="ICLPIC.jpg">
+            <img class="img-fluid" src="ICLPIC.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6 col-sm-6">
+          <a class="portfolio-box" href="ICLPIC.jpg">
+            <img class="img-fluid" src="ICLPIC.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6 col-sm-6">
+          <a class="portfolio-box" href="ICLPIC.jpg">
+            <img class="img-fluid" src="ICLPIC.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-2 ourPics">
+          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+        </div>
+        <div class="col-sm-2 ourPics">
+          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+        </div>
+        <div class="col-sm-2 ourPics">
+          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+        </div>
+        <div class="col-sm-2 ourPics">
+          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+        </div>
+        <div class="col-sm-2 ourPics">
+          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+        </div>
+        <div class="col-sm-1"></div>
+      </div>
+    </div>
+    <hr>
+    <div id="bottomBar">
+      <div class="imgHolder">
+        <a href="https://www.doc.ic.ac.uk/~pl1515/">
+          <img class="img-responsive" src="ICLpic.png" align="middle" id="iclLogo">
+        </a>
+      </div>
+    </div>
   </div>
   <div class="rightpane">
-    <h1></h1></div>
-</div>
-<div id="bottomBar">
-    <div class="imgHolder">
-        <a href="https://www.doc.ic.ac.uk/~pl1515/">
-            <img class="img-responsive" src="ICLpic.png" align="middle" id="iclLogo">
-        </a>
-    </div>
+    <h1></h1>
+  </div>
 </div>
 <script>
   $("#bar").mouseenter(function(){
@@ -90,6 +140,12 @@
   $("#iclLogo").mouseleave(function() {
       $(this).animate({"max-height" : "125px", "padding-top" : "40px"});
   });
+  $(".us").mouseenter(function(){
+    $(this).animate({"opacity" : "1"});
+  })
+  $(".us").mouseleave(function(){
+    $(this).animate({"opacity" : "0.7"});
+  })
 </script>
 
 </body>
