Improved text colours, general alignments

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 <a href="index.html">Home</a>
               </div>
               <div class="col-sm-2 pageLinks">
-                <a href="nlp.html">NLPs</a>
+                <a href="nlp.html"><img class="navBarImg" src="Content/Tiles/nlp.png" alt="Natural Language Processing"/></a>
               </div>
               <div class="col-sm-2 pageLinks">
-                <a href="explainnlp.html">Explainable NLPs</a>
+                <a href="explainnlp.html"><img class="navBarImg" src="Content/Tiles/explaiNlp.png" alt="Explainable Natural Language Processing"/></a>
               </div>
               <div class="col-sm-2 pageLinks">
-                <a href="wordembeddings.html">Word Embeddings</a>
+                <a href="wordembeddings.html"><img class="navBarImg" src="Content/Tiles/wordEmbed.png" alt="Word Embeddings"/></a>
               </div>
               <div class="col-sm-2 pageLinks">
-                <a href="interpwordembeddings.html">Interpretable Word Embeddings</a>
+                <a href="interpwordembeddings.html"><img class="navBarImg" src="Content/Tiles/interpretWordEmbed.png" alt="Interpretable Word Embeddings"/></a>
               </div>
               <div class="col-sm-1"></div>
             </div>
@@ -45,7 +45,7 @@
           <div class="row" id="projectRow">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
-              <a href="index.html" id="guyName">INTERPRETABLE WORD EMBEDDINGS & EXPLAINABLE NLP</a>
+              <a href="index.html" id="projectName">INTERPRETABLE WORD EMBEDDINGS & EXPLAINABLE NLP</a>
             </div>
             <div class="col-sm-3"></div>
           </div>
@@ -53,6 +53,7 @@
       </nav>
     </div>
   </div>
+  <div class="panes">
   <div class="leftpane">
     <h1></h1></div>
   <div class="middlepane">
@@ -83,12 +84,12 @@
         </div>
       </div>
     </div>
-    <div class="mainText">
+    <div id="mainText">
       <hr>
       <div class="contentBox">
         <img id="profilePic" src="https://www.doc.ic.ac.uk/~pl1515/images/Profile2.jpg" alt="Profile Picture" class="imgResizeAndBorder">
         <div id="aboutContent">
-          <h3 class="mainHeading"><b>About me:</b></h3>
+          <h3 id="aboutHeading"><b>About me:</b></h3>
           <p class="tab" id="aboutPiya">
             I am Piyawat Lertivittayakumjorn, you can call me ‘Peter’, and I am from Thailand. Currently, I am a PhD student in Computing at Imperial College London under the supervision of Professor Francesca Toni. You can find out more about me on my personal page <a href="https://www.doc.ic.ac.uk/~pl1515/" id="piyaLink">here</a>.
           </p>
@@ -140,6 +141,7 @@
   <div class="rightpane">
     <h1></h1>
   </div>
+</div>
 </div>
 <script>
   $("#bar").mouseenter(function(){
