--- a/index.html
+++ b/index.html
@@ -107,23 +107,23 @@
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-2 ourPics">
-          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+          <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
           <p class="names">KYLE PATEL</p>
         </div>
         <div class="col-sm-2 ourPics">
-          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+          <img class="img-fluid rounded-circle us" src="Content/Images/gl818.jpg" alt="">
           <p class="names">GIACOMO LA SCALA</p>
         </div>
         <div class="col-sm-2 ourPics">
-          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+          <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
           <p class="names">EDWARD WILLIAMS</p>
         </div>
         <div class="col-sm-2 ourPics">
-          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+          <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
           <p class="names">KUBAAAAAA</p>
         </div>
         <div class="col-sm-2 ourPics">
-          <img class="img-fluid rounded-circle us" src="fhb.jpg" alt="">
+          <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
           <p class="names">KEIGO</p>
         </div>
         <div class="col-sm-1"></div>
