--- a/explainnlp.html
+++ b/explainnlp.html
@@ -50,7 +50,7 @@
           <div class="row" id="projectRow">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
-              <a href="index.html" id="projectName">INTERPRETABLE WORD EMBEDDINGS & EXPLAINABLE NLP</a>
+              <a href="index.html" id="projectName">EXPLAINABLE NLP</a>
             </div>
             <div class="col-sm-3"></div>
           </div>
