Removed cool pictures and changed my name lol

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="col-sm-2 ourPics">
                         <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-                        <p class="names">KUBAAAAAA</p>
+                        <p class="names">JAKUB BOBER</p>
                     </div>
                     <div class="col-sm-2 ourPics">
                         <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
